fix: overflow on mobile

--- a/frontend/src/pages/DungeonPicker/DungeonPicker.module.css
+++ b/frontend/src/pages/DungeonPicker/DungeonPicker.module.css
@@ -31,7 +31,7 @@
     border-radius: 8px;
     padding: 20px;
     background-color: var(--muted-dark-gray);
-    overflow-y: auto;
+    /* overflow-y: auto; */
     height: 100%;
     min-width: 300px;
     text-align: center;
